example/java/jimmer-sql/src/main/java/org/babyfish/jimmer/sql/example/bll/error/BusinessException.java
package org.babyfish.jimmer.sql.example.bll.error;

public class BusinessException extends RuntimeException {

    public BusinessException(String message, Throwable cause) {
        super(message, cause);
    }
}
